# ml-py

./: .gitignore  LICENSE  Makefile  README.md  index.html  mnist.callgrind  pyproject.toml  service-worker.js  service-worker.js.map  workbox-6716fad7.js.map
data/mnist-cnn/logs/train/: events.out.tfevents.1662067600.GretasApleWatch.31671.0.v2
data/mnist-cnn/variables/: variables.index
frontend/: .eslintrc.js  package.json  tsconfig.json  webpack.config.js
frontend/src/: index.html
frontend/src/@types/: index.ts
frontend/src/components/: App.tsx  Mnist.css  Mnist.tsx
models/mnist-cnn/: keras_metadata.pb  model.json  saved_model.pb
models/mnist-cnn/logs/validation/: events.out.tfevents.1662067612.GretasApleWatch.31671.1.v2
models/mnist-cnn/variables/: variables.data-00000-of-00001
models/mnist-model/: keras_metadata.pb  model.json  saved_model.pb
models/mnist-model/logs/train/: events.out.tfevents.1662070131.GretasApleWatch.34678.0.v2
models/mnist-model/logs/validation/: events.out.tfevents.1662070133.GretasApleWatch.34678.1.v2
models/mnist-model/variables/: variables.data-00000-of-00001  variables.index
notes/: convolution.md
src/: mnist-cnn.py  mnist.py  sentiment.py  tester.py
tests/: test_basics.py
