[tool.poetry]
name = "spec-py"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.23.2"
tensorflow = "^2.9.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
pycodestyle = "^2.9.1"
mypy = "^0.971"
pprofile = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
show_error_codes = true
# In TypeScript I've found having inferred return types to be quite nice. I would
# prefer requiring arguments, and making return types optional.
disallow_untyped_defs = false
# Tensorflow has no types
ignore_missing_imports = true
